<resources>
    <string name="app_name">Hide &amp; Hunt</string>
    <string name="playButtonText">Play</string>

    <string name="loginButtonText">Login</string>
    <string name="loginPlaceholderName">Email</string>
    <string name="loginPlaceholderPseudo">Pseudo (only for registration)</string>
    <string name="loginPlaceholderPassword">Password</string>

    <string name="profileButtonText">Profile</string>
    <string name="profilePicPlaceholder">Profile picture</string>
    <string name="changeProfilePic">Change profile picture</string>

    <string name="registerButtonText">Register</string>
    <string name="titleText">Hide &amp; Hunt</string>
    <string name="play_button_text">Play</string>
    <string name="new_game_text">New Game</string>
    <string name="start_game">Start game</string>
    <string name="game_over">GAME OVER !</string>
    <string name="no_timer">--:--</string>

    <string name="title_activity_predator">PredatorActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="register_button">Register</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="leave">Leave</string>
    <string name="start">Start</string>

    <string name="game_name">Game name : %s</string>
    <string name="game_duration">Game duration : %d seconds</string>

    <!-- Prey catching fragment -->
    <string name="prey_alive">Your prey is alive</string>
    <string name="prey_dead">Your prey is dead</string>
    <string name="dummy_content">Hide\nYourself</string>

    <string name="predator_faction_name">Predator</string>
    <string name="prey_faction_name">Prey</string>

    <string name="title_activity_prey">PreyActivity</string>

    <!-- Game Creation Activity -->
    <string name="gameCreation_title">New Game</string>
    <string name="gameCreation_game_name">Game Name</string>
    <string name="gameCreation_duration">Duration (minutes)</string>
    <string name="gameCreation_mode">Game mode</string>
    <string name="gameCreation_create">Create !</string>
    <string name="gameCreation_placeholderName">Name</string>
    <string name="gameCreation_placeholderDuration">120</string>
    <string-array name="gameCreation_gameModes">
        <item>Normal</item>
        <item>Battle Royal</item>
    </string-array>

    <string name="crosshair_icon">crosshair_icon</string>
    <string name="no_target">No target</string>
    <string name="target_selection_dialog_title">Select a target</string>

    <string name="no_distance_label">Acquiring target…</string>
    <string name="distance_signal_description">distance_signal</string>
    <string name="predator_title">Predator</string>
    <string name="tracking_disabled">Tracking disabled</string>

    <string name="player_id">Player ID:</string>
    <string name="updates">#Updates:</string>
    <string name="last_location">Last location:</string>
    <string name="tracking">Tracking</string>
    <string name="player_id_hint">Player ID</string>
    <string name="zero">0</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="repeat_last_location">Repeat last location</string>
    <string name="prey_name">Prey %d</string>
    <string name="admin_logo">Admin logo</string>

    <string name="player_in_lobby">Players in the lobby: %d</string>
    <string name="game_created_by">Created by: %s</string>
    <string name="available_games">Available Games :</string>

    <string name="replay_button_text">Replay</string>
    <string name="stop_button_text">Stop</string>
    <string name="speed_label">Speed</string>
    <string name="replay_loading_error">Replay loading error</string>
    <string name="missing_replay_path_parameter">Missing replay path parameter</string>
    <string name="file_not_found">File not found %s</string>
    <string name="closest_predator">The closest predator is %6.2f meters away</string>
    <string name="predator_around">There are %d predators less than %d meters away</string>
    <string name="you_are_a_prey">You are a Prey, Hide !</string>
    <string name="distance">distance</string>
    <string name="you_are_not_ready">You are not ready, scan your NFC tag</string>
    <string name="you_are_ready">You are ready</string>
    <string name="duration">Duration</string>
    <string name="number_of_catches">Number of catches</string>
    <string name="back_to_main_screen">Back to Main Screen</string>
    <string name="seconds_duration">%d seconds</string>
    <string name="replay_file_format_error">Replay file format error</string>
    <string name="title_activity_error">ErrorActivity</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="unknown_error">Unknown error</string>
    <string name="return_to_main_screen">Return to main screen</string>
    <string name="registering_pending">Registering…</string>
    <string name="connecting_pending">Connecting…</string>
    <string name="join_game_button_text">Join Game</string>
</resources>
