<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".game.PredatorRadarFragment" >

    <TextView
        android:id="@+id/txt_closest_predator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/closest_predator"
        android:textColor="#2196F3"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_predator_around"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/predator_around"
        android:textColor="#2196F3"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/img_predator_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/distance"
        android:src="@drawable/ic_predator_distance_3" />
</LinearLayout>